k8s/issuance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  namespace: kube-credential
  labels:
    app: issuance-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: issuance-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  sessionAffinity: None
