k8s/verification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification-service
  namespace: kube-credential
  labels:
    app: verification-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: verification-service
  ports:
    - name: http
      port: 5001
      targetPort: 5001
      protocol: TCP
  sessionAffinity: None
